--- a/src/main/environment/common_ci.properties
+++ b/src/main/environment/common_ci.properties
@@ -64,12 +64,12 @@ labWL=7
 radioWL=7
 oncoWL=7
 tcSpeclistWL=7
-servicePointID: @env.SERVICE_POINT_ID@
-parkingPlaceID: @env.PARKING_PLACE_ID@
-providerServiceMapID: @env.PROVIDER_SERVICE_MAP_ID@
-vanID: @env.VAN_ID@
-serviceID: @env.SERVICE_ID@
-providerID: @env.PROVIDER_ID@
+servicePointID=@env.SERVICE_POINT_ID@
+parkingPlaceID=@env.PARKING_PLACE_ID@
+providerServiceMapID=@env.PROVIDER_SERVICE_MAP_ID@
+vanID=@env.VAN_ID@
+serviceID=@env.SERVICE_ID@
+providerID=@env.PROVIDER_ID@
 appId: @env.APP_ID@
 authKey: @env.AUTH_KEY@
 authSecret: @env.AUTH_SECRET@
