--- a/src/main/environment/common_ci.properties
+++ b/src/main/environment/common_ci.properties
@@ -70,9 +70,9 @@ providerServiceMapID=@env.PROVIDER_SERVICE_MAP_ID@
 vanID=@env.VAN_ID@
 serviceID=@env.SERVICE_ID@
 providerID=@env.PROVIDER_ID@
-appId: @env.APP_ID@
-authKey: @env.AUTH_KEY@
-authSecret: @env.AUTH_SECRET@
+appId=@env.APP_ID@
+authKey=@env.AUTH_KEY@
+authSecret=@env.AUTH_SECRET@
 scheduling-slotsize=5
 prescription=TMPrescription SMS
 ### Redis IP
