feat(elk-stack-setup): add logging.file.name ci env

--- a/src/main/environment/common_ci.properties
+++ b/src/main/environment/common_ci.properties
@@ -68,5 +68,5 @@ tcSpeclistWL=7
 ### Redis IP
 spring.redis.host=localhost
 
-
-
+#ELK logging file name
+logging.file.name=@env.TM_API_LOGGING_FILE_NAME@
